--- a/css/styles.css
+++ b/css/styles.css
@@ -30,7 +30,7 @@ img{
 
 .header {
     border-bottom: 1px solid #e7e9fc;
-        
+      box-shadow: 0 1px 6px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 2px 1px 0 rgba(46, 47, 66, 0.08);  
 }
 
 .header-navigation {
@@ -84,9 +84,27 @@ color: #2e2f42;
     text-decoration: none;
     padding: 24px 0;
     display: block;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.header-navigation-link:hover, .header-navigation-link:focus{
+.header-navigation-link.current{
+    position: relative;
+}
+
+.header-navigation-link.current::after{
+    content: '';
+    position: absolute;
+    left: 0;
+    bottom: -1px;
+    border-radius: 2px;
+    width: 100%;
+    height: 4px;
+    background-color: #404bbf;
+}
+
+.header-navigation-link:hover,
+.header-navigation-link:focus,
+.header-navigation-link.current{
     color: #404bbf;
 }
 
@@ -109,6 +127,8 @@ margin-left: auto;
     letter-spacing: 0.02em;
     color: #434455;
     text-decoration: none;
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .header-address-link:hover, .header-address-link:focus{
@@ -122,9 +142,18 @@ margin-left: auto;
 
 .hero {
     background-color: #2e2f42;
+    background-image:linear-gradient(rgba(46, 47, 66, 0.7),
+    rgba(46, 47, 66, 0.7)),
+     url(../images/people-office\ 1-min.jpg);
+     margin: 0 auto;
     padding-top: 188px;
     padding-bottom: 188px;
+    width: 1440px;
+    
 }
+
+
+
 
 .hero-title {
     font-size: 56px;
