--- a/css/styles.css
+++ b/css/styles.css
@@ -158,6 +158,9 @@ margin-left: auto;
     padding-top: 188px;
     padding-bottom: 188px;
     width: 1440px;
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: cover;
     
 }
 
@@ -302,6 +305,7 @@ margin-bottom: 72px;
 .team-names-job{
     padding-top: 32px;
     padding-bottom: 32px;
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 }
 
 .team-names {
@@ -372,10 +376,39 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-li{
+}
+
+.portfolio-list-li:hover .portfolio-cover-text{
+transform: translateY(0%);
+}
+
+.portfolio-list-li:hover .portfolio-list-text{
+    box-shadow: 0 2px 1px 0 rgba(46, 47, 66, 0.08), 0 1px 1px 0 rgba(46, 47, 66, 0.16), 0 1px 6px 0 rgba(46, 47, 66, 0.08);
 
 }
 
+.portfolio-cover-container{
+position: relative;
+overflow: hidden;
+}
+
 .portfolio-photo {
+}
+
+.portfolio-cover-text{
+position: absolute;
+background-color: #4d5ae5;
+font-weight: 400;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #f4f4fd;
+padding: 40px 32px;
+top: 0;
+height: 100%;
+transform: translateY(100%);
+transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio-list-text{
@@ -386,6 +419,8 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-bottom: 1px solid #e7e9fc;
     border-left: 1px solid #e7e9fc;
     border-right: 1px solid #e7e9fc;
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 }
 
 .portfolio-names {
