--- a/css/styles.css
+++ b/css/styles.css
@@ -377,13 +377,14 @@ transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-li{
+    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .portfolio-list-li:hover .portfolio-cover-text{
 transform: translateY(0%);
 }
 
-.portfolio-list-li:hover .portfolio-list-text{
+.portfolio-list-li:hover{
     box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 
 }
@@ -420,7 +421,7 @@ transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     border-bottom: 1px solid #e7e9fc;
     border-left: 1px solid #e7e9fc;
     border-right: 1px solid #e7e9fc;
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    
 
 }
 
