fixed mistakes in thurth section

--- a/css/styles.css
+++ b/css/styles.css
@@ -296,16 +296,17 @@ margin-bottom: 72px;
 .team-list-li{
     background-color: #FFFFFF;
     border-radius: 0px 0px 4px 4px;
+    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
+
+
 .team-photo {
-  
 }
 
 .team-names-job{
     padding-top: 32px;
     padding-bottom: 32px;
-    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .team-names {
@@ -334,7 +335,7 @@ margin-bottom: 8px;
     padding: 0 16px;
 }
 
-.team-list-li{
+.team-list-link-li{
     list-style-type: none;
     justify-content: center;
 }
