--- a/css/styles.css
+++ b/css/styles.css
@@ -153,7 +153,7 @@ margin-left: auto;
     background-color: #2e2f42;
     background-image:linear-gradient(rgba(46, 47, 66, 0.7),
     rgba(46, 47, 66, 0.7)),
-     url(../images/people-office\ 1-min.jpg);
+     url(../images/people-office1-min.jpg);
      margin: 0 auto;
     padding-top: 188px;
     padding-bottom: 188px;
