--- a/css/styles.css
+++ b/css/styles.css
@@ -461,13 +461,13 @@ color: #434455;
     padding-left: 15px;
     padding-right: 15px;
     margin: 0 auto;
-    gap: 120px;
     align-items: baseline;
 }
 
 .footer-container{
     width: 264px;
     height: 112px;
+    margin-right: 120px;
 }
 
 .footer-logo {
